--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,1 +1,10 @@
 
+.tabs{
+    padding: 10px;
+    margin-top: 10px;
+    margin-left:10px;
+}
+.tab-content{
+    padding: 10px;
+    margin-top: 10px;
+}
